--- a/.mupx-deploy/settings.json
+++ b/.mupx-deploy/settings.json
@@ -23,5 +23,12 @@
     "PEM_FILE": "google-cloud.pem",
     "BUCKET": "hospohero"
   },
-  "Location": "Ternopil,UA"
+  "services": [
+    {
+      "service": "google",
+      "loginStyle": "popup",
+      "clientId": "24418709828-gcgojuj4t4gkfc5kke2u1vr7btmv093g.apps.googleusercontent.com",
+      "secret": "ALNUwQE9u31XHqj31fMYXxVb"
+    }
+  ]
 }
