--- a/.mupx-deploy/settings.json
+++ b/.mupx-deploy/settings.json
@@ -7,10 +7,6 @@
   "intercom": {
     "secret": "fF3c2THd9ILbXpPuvNs7Q-_UpisGchsbjMj2W4Y-"
   },
-  "OpenWeatherMap": {
-    "HOST": "http://api.openweathermap.org",
-    "KEY": "a0ddb6e5e4b1de866a439e811195fd11"
-  },
   "Revel": {
     "HOST": "https://farmcafe.revelup.com",
     "KEY": "a903d4c06d424a07ad3de99d3eec673c",
@@ -23,9 +19,9 @@
     "PEM_FILE": "google-cloud.pem",
     "BUCKET": "hospohero"
   },
-  "WorldWeather":{
-    "KEY": "66d4c8235abd14ae392616606bf1d",
-    "HOST": "http://api.worldweatheronline.com/free/v2/"
+  "WorldWeather": {
+    "KEY": "2cd3869cfeb201cb9db94722d5e98",
+    "HOST": "https://api.worldweatheronline.com/premium/v1/"
   },
   "services": [
     {
