--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,4 @@ smart.lock
 .idea
 .dump
 restore_remote_db.sh
-.mupx-deploy/app_hospohero_com.ca-bundle
-.mupx-deploy/app_hospohero_com.p7b
+.mupx-deploy/ssl
