--- a/.jshintrc
+++ b/.jshintrc
@@ -155,18 +155,12 @@
     "T9n": false,                   // softwarerero:accounts-t9n
 
     // Collections
-    "Menus": true,
     "MenuItems": true,
     "Ingredients": true,
     "JobItems": true,
     "Jobs": true,
     "Shifts": true,
-    "SalesForecast": true,
-    "ActualSales": true,
-    "Sales": true,
-    "SalesCalibration": true,
-    "ForecastCafe": true,
-    "ForecastCatering": true,
+    "DailySales": true,
     "Comments": true,
     "Notifications": true,
     "Subscriptions": true,
@@ -175,7 +169,6 @@
     "Sections": true,
     "GeneralAreas": true,
     "SpecialAreas": true,
-    "Payroll": true,
     "Posts": true,
     "StocktakeMain": true,
     "Stocktakes": true,
@@ -186,6 +179,7 @@
     "Suppliers": true,
 
     // Other global variables
-    "logger": true
+    "logger": true,
+    "HospoHero": true
   }
 }
