Updated flyouts package, .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
-smart.lock
+#misc
 *.DS_Store
 *.log
-.gagarin
+
 .idea
 .dump
-restore_remote_db.sh
 .mupx-deploy/ssl
-run_with_real_db.sh
+
+#bash
+restore_remote_db.sh
 build.sh
 run-android.sh
+
+#packages
 packages/modals
 packages/anti-search-source
+packages/flyouts
