--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ run_with_real_db.sh
 build.sh
 run-android.sh
 reset_from_dump.sh
+
+packages/anti-search-source
+packages/flyouts
+packages/modals
+packages/blaze-states
