Introduced prediction threshold and interval configurations

--- a/.mupx-deploy/settings.json
+++ b/.mupx-deploy/settings.json
@@ -32,6 +32,13 @@
   "GCM": {
     "key": "AIzaSyCBw7Db9feI3lrSbncwqkqhxFXUbKN295o"
   },
-  "useRawOrders": false,
-  "logLevel": "info"
+  "logLevel": "info",
+  "prediction": {
+    "useRawOrders": false,
+    "forecastIntervals": [
+      84,
+      7,
+      2
+    ]
+  }
 }
